# ece4440-Automatic-License-Plate-Recognition-

./: README.md
source code/fin_build_v2.3_edit/: CMakeLists.txt  DBManager.cpp  DBManager.h  DetectRegions.cpp  DetectRegions.h  Plate.cpp  Plate.h  create-table.cpp  main.cpp  pin_unexport.sh  trainSVM.cpp
